# allthingsearch

./: .python-version  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
deploy/azure/: deploy_model.py  exampleconfig.py
dockerstack/: .env  docker-compose-dev.yml  docker-compose.yml  setup.md
gradio/: config.env  config.example.env  esutils.py  gcputils.py  main.py  mainmulti.py  minioutils.py
gradio/templates/: object.html
tests/: backend.py  config.env  runcelery.sh  simple_test.py  tasks.py  vector_test.py
tests/cap3d/: render_script.py
utils/: config.env  esutils.py  load_data.py  minioutils.py  search_data.py
