[tool.poetry]
name = "allthingsearch"
version = "0.1.0"
description = ""
authors = ["Paul AI <himeros.ai@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^4.32.2"
elasticsearch = "^8.13.0"
boto3 = "^1.34.117"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
objaverse = ["objaverse"]
testing = ["unittest"]